add new features. fix
Теоретические задачи. Решение задач на разных языках программирования. Контроль языка программирования при ответе на вопрос и компиляции. Фикс ведения статистики пользователя.
