# app/http/dtos/compile_req.go
@@ -1,5 +1,6 @@
 package dtos
 
 type CompileRequest struct {
-	Code string `json:"code" binding:"required"`
+	Code     string `json:"code" binding:"required"`
+	Language string `json:"language" binding:"required"`
 }
