# app/http/dtos/verify_answer_and_increment_user_score_req.go
@@ -1,6 +1,7 @@
 package dtos
 
-type IncreaseUserScoreAndAddAnswerRequest struct {
+type VerifyAnswerAndIncrementUserScoreRequest struct {
 	ProblemId uint   `json:"problem_id" binding:"required"`
+	Language  string `json:"language" binding:"required"`
 	Answer    string `json:"answer" binding:"required"`
 }
