# app/models/problem.go
@@ -8,4 +8,6 @@ type Problem struct {
 	CreatedAt time.Time `sql:"DEFAULT:current_timestamp" json:"-"`
 	ThemeID   uint      `gorm:"not null" json:"theme_id" json:"-"`
 	Theme     *Theme    `json:"theme,omitempty" json:"-"`
+	Languages []string  `gorm:"not null" json:"languages"`
+	IsTheory  bool      `gorm:"not null" json:"is_theory"`
 }
